--- a/_modules/grandchallenge/workstations/models.html
+++ b/_modules/grandchallenge/workstations/models.html
@@ -140,6 +140,8 @@
     <span class="k">class</span><span class="w"> </span><span class="nc">Meta</span><span class="p">(</span><span class="n">UUIDModel</span><span class="o">.</span><span class="n">Meta</span><span class="p">,</span> <span class="n">TitleSlugDescriptionModel</span><span class="o">.</span><span class="n">Meta</span><span class="p">):</span>
         <span class="n">ordering</span> <span class="o">=</span> <span class="p">(</span><span class="s2">&quot;created&quot;</span><span class="p">,</span> <span class="s2">&quot;title&quot;</span><span class="p">)</span>
 
+<div class="viewcode-block" id="Workstation.active_image">
+<a class="viewcode-back" href="../../../workstations.html#grandchallenge.workstations.models.Workstation.active_image">[docs]</a>
     <span class="nd">@cached_property</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">active_image</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
@@ -154,7 +156,8 @@
                 <span class="o">.</span><span class="n">get</span><span class="p">()</span>
             <span class="p">)</span>
         <span class="k">except</span> <span class="n">ObjectDoesNotExist</span><span class="p">:</span>
-            <span class="k">return</span> <span class="kc">None</span>
+            <span class="k">return</span> <span class="kc">None</span></div>
+
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__str__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="n">public</span> <span class="o">=</span> <span class="s2">&quot; (Public)&quot;</span> <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">public</span> <span class="k">else</span> <span class="s2">&quot;&quot;</span>
