--- a/_modules/grandchallenge/evaluation/models.html
+++ b/_modules/grandchallenge/evaluation/models.html
@@ -1587,6 +1587,7 @@
         <span class="p">],</span>
         <span class="n">storage</span><span class="o">=</span><span class="n">protected_s3_storage</span><span class="p">,</span>
         <span class="n">blank</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+        <span class="n">max_length</span><span class="o">=</span><span class="mi">255</span><span class="p">,</span>
     <span class="p">)</span>
     <span class="n">supplementary_file</span> <span class="o">=</span> <span class="n">models</span><span class="o">.</span><span class="n">FileField</span><span class="p">(</span>
         <span class="n">upload_to</span><span class="o">=</span><span class="n">submission_supplementary_file_path</span><span class="p">,</span>
@@ -1595,6 +1596,7 @@
             <span class="n">MimeTypeValidator</span><span class="p">(</span><span class="n">allowed_types</span><span class="o">=</span><span class="p">(</span><span class="s2">&quot;text/plain&quot;</span><span class="p">,</span> <span class="s2">&quot;application/pdf&quot;</span><span class="p">))</span>
         <span class="p">],</span>
         <span class="n">blank</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+        <span class="n">max_length</span><span class="o">=</span><span class="mi">255</span><span class="p">,</span>
     <span class="p">)</span>
     <span class="n">comment</span> <span class="o">=</span> <span class="n">models</span><span class="o">.</span><span class="n">CharField</span><span class="p">(</span>
         <span class="n">max_length</span><span class="o">=</span><span class="mi">128</span><span class="p">,</span>
@@ -1816,6 +1818,7 @@
             <span class="s2">&quot;.tar.gz file of the ground truth that will be extracted to /opt/ml/input/data/ground_truth/ during inference&quot;</span>
         <span class="p">),</span>
         <span class="n">storage</span><span class="o">=</span><span class="n">private_s3_storage</span><span class="p">,</span>
+        <span class="n">max_length</span><span class="o">=</span><span class="mi">255</span><span class="p">,</span>
     <span class="p">)</span>
 
     <span class="nd">@property</span>
