--- a/_modules/grandchallenge/reader_studies/models.html
+++ b/_modules/grandchallenge/reader_studies/models.html
@@ -289,6 +289,7 @@
         <span class="n">aspect_ratios</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;1/1&quot;</span><span class="p">],</span>
         <span class="n">width_field</span><span class="o">=</span><span class="s2">&quot;logo_width&quot;</span><span class="p">,</span>
         <span class="n">height_field</span><span class="o">=</span><span class="s2">&quot;logo_height&quot;</span><span class="p">,</span>
+        <span class="n">max_length</span><span class="o">=</span><span class="mi">255</span><span class="p">,</span>
     <span class="p">)</span>
     <span class="n">logo_width</span> <span class="o">=</span> <span class="n">models</span><span class="o">.</span><span class="n">PositiveSmallIntegerField</span><span class="p">(</span><span class="n">editable</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">null</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
     <span class="n">logo_height</span> <span class="o">=</span> <span class="n">models</span><span class="o">.</span><span class="n">PositiveSmallIntegerField</span><span class="p">(</span><span class="n">editable</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">null</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
@@ -300,6 +301,7 @@
         <span class="n">aspect_ratios</span><span class="o">=</span><span class="p">[</span><span class="kc">None</span><span class="p">],</span>
         <span class="n">width_field</span><span class="o">=</span><span class="s2">&quot;social_image_width&quot;</span><span class="p">,</span>
         <span class="n">height_field</span><span class="o">=</span><span class="s2">&quot;social_image_height&quot;</span><span class="p">,</span>
+        <span class="n">max_length</span><span class="o">=</span><span class="mi">255</span><span class="p">,</span>
     <span class="p">)</span>
     <span class="n">social_image_width</span> <span class="o">=</span> <span class="n">models</span><span class="o">.</span><span class="n">PositiveSmallIntegerField</span><span class="p">(</span>
         <span class="n">editable</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">null</span><span class="o">=</span><span class="kc">True</span>
