--- a/_modules/grandchallenge/evaluation/models.html
+++ b/_modules/grandchallenge/evaluation/models.html
@@ -117,6 +117,7 @@
     <span class="n">StatusChoices</span><span class="p">,</span>
     <span class="n">SubmissionKindChoices</span><span class="p">,</span>
 <span class="p">)</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">grandchallenge.forge.models</span><span class="w"> </span><span class="kn">import</span> <span class="n">ForgePhase</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">grandchallenge.hanging_protocols.models</span><span class="w"> </span><span class="kn">import</span> <span class="n">HangingProtocolMixin</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">grandchallenge.notifications.models</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
     <span class="n">Notification</span><span class="p">,</span>
@@ -1364,6 +1365,34 @@
         <span class="k">return</span> <span class="n">reverse</span><span class="p">(</span>
             <span class="s2">&quot;evaluation:interface-list&quot;</span><span class="p">,</span>
             <span class="n">kwargs</span><span class="o">=</span><span class="p">{</span><span class="s2">&quot;challenge_short_name&quot;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">challenge</span><span class="p">,</span> <span class="s2">&quot;slug&quot;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">slug</span><span class="p">},</span>
+        <span class="p">)</span>
+
+    <span class="nd">@cached_property</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">forge_model</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">if</span> <span class="p">(</span>
+            <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">archive</span>
+            <span class="ow">or</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">submission_kind</span> <span class="o">==</span> <span class="n">SubmissionKindChoices</span><span class="o">.</span><span class="n">ALGORITHM</span>
+        <span class="p">):</span>
+            <span class="k">raise</span> <span class="ne">NotImplementedError</span>
+
+        <span class="k">return</span> <span class="n">ForgePhase</span><span class="p">(</span>
+            <span class="n">challenge</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">challenge</span><span class="o">.</span><span class="n">forge_model</span><span class="p">,</span>
+            <span class="n">slug</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">slug</span><span class="p">,</span>
+            <span class="n">archive</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">archive</span><span class="o">.</span><span class="n">forge_model</span><span class="p">,</span>
+            <span class="n">algorithm_interfaces</span><span class="o">=</span><span class="p">[</span>
+                <span class="n">interface</span><span class="o">.</span><span class="n">forge_model</span>
+                <span class="k">for</span> <span class="n">interface</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">algorithm_interfaces</span><span class="o">.</span><span class="n">all</span><span class="p">()</span>
+            <span class="p">],</span>
+            <span class="n">evaluation_additional_inputs</span><span class="o">=</span><span class="p">[</span>
+                <span class="n">socket</span><span class="o">.</span><span class="n">forge_model</span>
+                <span class="k">for</span> <span class="n">socket</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">additional_evaluation_inputs</span><span class="o">.</span><span class="n">all</span><span class="p">()</span>
+            <span class="p">],</span>
+            <span class="n">evaluation_additional_outputs</span><span class="o">=</span><span class="p">[</span>
+                <span class="n">socket</span><span class="o">.</span><span class="n">forge_model</span>
+                <span class="k">for</span> <span class="n">socket</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">evaluation_outputs</span><span class="o">.</span><span class="n">exclude</span><span class="p">(</span>
+                    <span class="n">slug</span><span class="o">=</span><span class="s2">&quot;metrics-json-file&quot;</span>
+                <span class="p">)</span>
+            <span class="p">],</span>
         <span class="p">)</span></div>
 
 
